--- a/flask_app/static/style/style.css
+++ b/flask_app/static/style/style.css
@@ -28,6 +28,7 @@
   --black-color: #000;
   --dull-black: #252222;
   --secondary-color: rgb(21, 142, 255);
+  --secondary-color-hover: rgba(21, 142, 255, 0.5);
   --btn-primary: rgb(0, 0, 184);
   --button-background-color: #6a7db1;
   --nav-bg: rgb(43, 43, 255);
@@ -116,7 +117,7 @@ i {
   display: none;
 }
 
-.navBar .hamburgerContainer {
+.hamburgerContainer {
   cursor: pointer;
   display: inline-block;
 }
@@ -190,6 +191,7 @@ i {
 .navDisplay ul {
   list-style-type: none;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -204,12 +206,14 @@ i {
 }
 
 .navDisplay > ul > li a {
+  width: 100%;
   color: var(--black-color);
   font-family: var(--inter-font);
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  padding: 5px 7px;
 }
 
 .navDisplay > ul > li img {
@@ -217,7 +221,7 @@ i {
   /* margin-inline: auto; */
 }
 
-.navDisplay > ul > li:hover {
+.navDisplay > ul > li > a:hover {
   color: var(--lilac-color);
   text-decoration: none;
   cursor: pointer;
